--- a/FastQueryStock/FastQueryStock.csproj
+++ b/FastQueryStock/FastQueryStock.csproj
@@ -49,6 +49,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hardcodet.NotifyIcon.Wpf.1.0.8\lib\net45\Hardcodet.Wpf.TaskbarNotification.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\Libs\MahApps.Metro.dll</HintPath>
     </Reference>
@@ -102,6 +106,7 @@
     <Compile Include="Common\DateTimeUtils.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
     <Compile Include="Common\TaskExtension.cs" />
+    <Compile Include="Common\ValueColorHelper.cs" />
     <Compile Include="Controls\DropListBox.cs" />
     <Compile Include="Controls\NotificationTip.cs" />
     <Compile Include="Controls\StockDropListBox.cs" />
@@ -119,9 +124,15 @@
     <Compile Include="Service\LocalStockService.cs" />
     <Compile Include="Service\PttStockQueryService.cs" />
     <Compile Include="Service\TwseStockQueryService.cs" />
+    <Compile Include="ViewModels\BuySellPricePanelViewModel.cs" />
+    <Compile Include="ViewModels\Controls\BuySellPriceItem.cs" />
+    <Compile Include="ViewModels\Controls\BuySellPriceViewModel.cs" />
     <Compile Include="ViewModels\PttContentViewModel.cs" />
     <Compile Include="ViewModels\StockMainChartViewModel.cs" />
     <Compile Include="ViewModels\Controls\StockValueChartViewModel.cs" />
+    <Compile Include="Views\BuySellPricePanel.xaml.cs">
+      <DependentUpon>BuySellPricePanel.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Chart\StockValueChartControl.xaml.cs">
       <DependentUpon>StockValueChartControl.xaml</DependentUpon>
     </Compile>
@@ -129,6 +140,9 @@
     <Compile Include="Views\IStockChartPanelView.cs" />
     <Compile Include="Views\StockMainChartPanel.xaml.cs">
       <DependentUpon>StockMainChartPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserControls\BuySellPriceControl.xaml.cs">
+      <DependentUpon>BuySellPriceControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\UserControls\SimpleStyleStockUserControl.xaml.cs">
       <DependentUpon>SimpleStyleStockUserControl.xaml</DependentUpon>
@@ -153,11 +167,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\BuySellPricePanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Chart\StockValueChartControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\StockMainChartPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\BuySellPriceControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
