加入五檔掛價自動更新機制

--- a/FastQueryStock/FastQueryStock.csproj
+++ b/FastQueryStock/FastQueryStock.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Controls\DropListBox.cs" />
     <Compile Include="Controls\NotificationTip.cs" />
     <Compile Include="Controls\StockDropListBox.cs" />
+    <Compile Include="Event\EventType.cs" />
+    <Compile Include="Event\NotificationCenter.cs" />
     <Compile Include="Model\Charts\ExtraLine.cs" />
     <Compile Include="Model\FavoriteStockModel.cs" />
     <Compile Include="Model\ModelConverter.cs" />
@@ -257,6 +259,7 @@
       <Name>StockSDK</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
