1.ignore word case when search the key word is lower case., 2. fix drag drop problem

--- a/FastQueryStock/FastQueryStock.csproj
+++ b/FastQueryStock/FastQueryStock.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Common\BindingProxy.cs" />
     <Compile Include="Common\DateTimeUtils.cs" />
     <Compile Include="Common\DelegateCommand.cs" />
+    <Compile Include="Common\Exceptions\DataNotFoundException.cs" />
     <Compile Include="Common\TaskExtension.cs" />
     <Compile Include="Common\ValueColorHelper.cs" />
     <Compile Include="Controls\DropListBox.cs" />
